# Open-GL

./: .gitignore  CMakeLists.txt  README.md
app-core/: CMakeLists.txt
app-core/include/: core.h
app-core/src/: key_callback.cpp  shader_program.cpp
app-task1-no-animation/: CMakeLists.txt  main.cpp
app-task1-no-animation/shaders/: fragment.glsl  vertex.glsl
app-task2-one-shot-animation/: CMakeLists.txt  main.cpp
app-task2-one-shot-animation/shaders/: vertex.glsl
app-task3-repeatable-animation/: CMakeLists.txt  main.cpp
app-task3-repeatable-animation/shaders/: fragment.glsl  init.glsl  reflect.glsl  vertex.glsl
app-task4-surprise-your-teacher/: CMakeLists.txt  main.cpp
app-task4-surprise-your-teacher/shaders/: fragment.glsl  init.glsl  reflect.glsl  vertex ellipse.glsl  vertex triangle.glsl  vertex.glsl
demo/: CMakeLists.txt  main.cpp
demo/shaders/: fragment.glsl  init.glsl  reflect.glsl  vertex.glsl
glfw/tests/: triangle-vulkan.c
